rename id variable to sample type
